fixed the .env file, changed ollama model and opted for smaller model due to hardware constraints. improving ask() function in pipeline.py for better answers

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 LLM_PROVIDER=ollama
 OLLAMA_BASE_URL=OLLAMA_BASE
-OLLAMA_CHAT_MODEL=llama3.1
+OLLAMA_CHAT_MODEL=phi3:mini
 OLLAMA_EMBED_MODEL=nomic-embed-text
 
 # RAG defaults (optional)
 RAG_TOP_K=8
 CHUNK_SIZE=800
 CHUNK_OVERLAP=120
-INDEX_DIR=indexes/faiss
-PDF_DIR=data/pdfs
+INDEX_DIR=C:\Users\SyedZain\PycharmProjects\rag-chatbot\indexes\faiss
+PDF_DIR=C:\Users\SyedZain\PycharmProjects\rag-chatbot\data\pdfs
