fixed ingest.py, chunking.py, and pipeline.py. Getting correct answers but need to improve chunk quality

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 LLM_PROVIDER=ollama
 OLLAMA_BASE_URL=OLLAMA_BASE
-OLLAMA_CHAT_MODEL=phi3:mini
+OLLAMA_CHAT_MODEL=llama3.2:3b #phi3:mini
 OLLAMA_EMBED_MODEL=nomic-embed-text
 
 # RAG defaults (optional)
-RAG_TOP_K=8
+RAG_TOP_K=4 #8
 CHUNK_SIZE=800
 CHUNK_OVERLAP=120
 INDEX_DIR=C:\Users\SyedZain\PycharmProjects\rag-chatbot\indexes\faiss
 PDF_DIR=C:\Users\SyedZain\PycharmProjects\rag-chatbot\data\pdfs
+DOC_INDEX_DIR=C:\Users\SyedZain\PycharmProjects\rag-chatbot\indexes\faiss
+DOC_ROUTE_TOP_N=3
+CHUNK_FETCH_K=40
+DOC_TEXT_MAX_CHARS=12000
